--- a/custom_widgets/baseyr/baseyr.css
+++ b/custom_widgets/baseyr/baseyr.css
@@ -1,4 +1,5 @@
-table {
+
+.widget-baseyr-{{id}} table {
   width: 100%;
   height: 100%;
   border-spacing: 0;
@@ -6,91 +7,88 @@ table {
   font-size: 0.8em;
 }
 
-.hours td {
+.widget-baseyr-{{id}} .hours td {
   text-align: center;
   font-family: sans-serif;
   font-weight: bold;
 }
 
-.hours>td>div {
+.widget-baseyr-{{id}} .hours>td>div {
   display: flex;
 }
 
-.wind {
+.widget-baseyr-{{id}} .wind {
   flex-grow: 1;
   text-align: center;
   display: inline-block;
 }
 
-.wind-left {
+.widget-baseyr-{{id}} .wind-left {
   margin-left: 0.25em;
 }
 
-.wind-right {
+.widget-baseyr-{{id}} .wind-right {
   margin-right: 0.25em;
 }
 
-.hour {
+.widget-baseyr-{{id}} .hour {
   display: inline-block;
   padding-top: 0.4em;
   font-size: 1.1em;
 }
 
-.markers td {
+.widget-baseyr-{{id}} .markers td {
   height: 0.2em;
   border-style: solid;
   border-width: 0 thin thin 0;
-  border-color: $gray_medium;
 }
 
-.markers td:last-child {
+.widget-baseyr-{{id}} .markers td:last-child {
   border-width: 0 0 thin 0;
 }
 
-.symbols {
+.widget-baseyr-{{id}} .symbols {
 }
 
-.symbols td {
+.widget-baseyr-{{id}} .symbols td {
   text-align: center;
   border-style: dashed;
   border-width: 0 thin 0 0;
-  border-color: $gray_medium;
 }
 
-.symbols td:last-child {
+.widget-baseyr-{{id}} .symbols td:last-child {
   border-style: none;
 }
 
-.data td {
+.widget-baseyr-{{id}} .data td {
   border-style: solid;
   border-width: thin thin 0 0;
-  border-color: $gray_medium;
   text-align: center;
   font-family: sans-serif;
 }
 
-.data td:last-child {
+.widget-baseyr-{{id}} .data td:last-child {
   border-width: thin 0 0 0;
 }
 
-.temp:after {
+.widget-baseyr-{{id}} .temp:after {
   content: attr(data-temp) "°";
 }
 
-.temp {
-  color: $red;
+.widget-baseyr-{{id}} .temp {
+  color: #ef9c9c;
 }
 
-.temp[data-temp^="-"], .temp[data-temp="0"] {
-  color: $blue;
+.widget-baseyr-{{id}} .temp[data-temp^="-"], .temp[data-temp="0"] {
+  color: #a09cef;
 }
 
-.data td div {
+.widget-baseyr-{{id}} .data td div {
   position: relative;
   height: 2em;
 }
 
-.data .temp {
+.widget-baseyr-{{id}} .data .temp {
   position: absolute;
   top: 0em;
   left: 0.2em;
@@ -98,18 +96,18 @@ table {
   font-size: 1.1em;
 }
 
-.data .rain {
+.widget-baseyr-{{id}} .data .rain {
   position: absolute;
   bottom: 0em;
   right: 0.2em;
   font-size: 0.9em;
 }
 
-.data .rain:after {
+.widget-baseyr-{{id}} .data .rain:after {
   content: attr(data-rain) " mm";
 }
 
-.data .rain[data-rain="0"]:after {
- content: "";
+.widget-baseyr-{{id}} .data .rain[data-rain="0"]:after {
+  content: "";
 }
 
