--- a/custom_widgets/baseyr/baseyr.css
+++ b/custom_widgets/baseyr/baseyr.css
@@ -1,10 +1,13 @@
-
 .widget-baseyr-{{id}} table {
   width: 100%;
   height: 100%;
   border-spacing: 0;
   table-layout: fixed !important;
   font-size: 0.8em;
+}
+
+.widget-baseyr-{{id}} img {
+  filter: drop-shadow(2px 2px 0px #444);
 }
 
 .widget-baseyr-{{id}} .hours td {
