--- a/custom_widgets/basetransport/basetransport.css
+++ b/custom_widgets/basetransport/basetransport.css
@@ -36,6 +36,7 @@
   font-size: 0.9em;
   padding-top: 0.1em;
   padding-bottom: 0.1em;
+  font-weight: bold;
 }
 
 .widget-basetransport-{{id}} .platform {
