--- a/custom_widgets/basecalendar/basecalendar.css
+++ b/custom_widgets/basecalendar/basecalendar.css
@@ -22,13 +22,13 @@
 }
 
 .widget-basecalendar-{{id}} .duration {
-    width: 45%;
-    white-space: nowrap;
+    width: 40%;
+    white-space: pre;
     float: left;
 }
 
 .widget-basecalendar-{{id}} .info {
-    width: 55%;
+    width: 60%;
     float: left;
 }
 
