--- a/custom_widgets/baseyr/baseyr.css
+++ b/custom_widgets/baseyr/baseyr.css
@@ -114,3 +114,11 @@
   content: "";
 }
 
+.widget-baseyr-{{id}} .disclaimer {
+  position: absolute;
+  bottom: -1em;
+  right: 0.5em;
+  font-size: 0.5em;
+  color: #888;
+}
+
